# tboy_cli

./: CMakeLists.txt  main.cpp
commands/: command.cpp  command.h  commandreg.cpp  commandreg.h  help.cpp  help.h  split.cpp  split.h  tca.cpp  tca.h  time.cpp  time.h  vsm.cpp  vsm.h
commands/calculator/: calculator.cpp  calculator.h
testing/: testfile.cpp  testfile.h
utils/: cliutils.cpp  cliutils.h  stringutils.cpp  stringutils.h  utils.cpp  utils.h
